--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,8 @@
  **----------------------- */
 
 .wpts-settings-block {
-    padding: 2px 20px;
+    padding: 10px 20px 16px;
+    margin-bottom: 60px;
     background: #fff;
     border: 1px solid #e5e5e5;
     border-top: 1px solid #fff;
@@ -42,4 +43,131 @@
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
+}
+
+.wpts-sb-btn {
+    margin-top: 24px;
+}
+
+
+/**
+ * BOX blocks
+ **----------------------- */
+
+.wpts_eb_block {
+    position: relative;
+    border: 1px solid #e5e5e5;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.06);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.06);
+    background: #fff;
+    margin-bottom: 16px;
+    border-radius: 1px;
+}
+
+    .wpts_eb_title {
+        padding: 8px 12px;
+        position: relative;
+        background: #f7f7f7;
+    }
+
+        .wpts_eb_title h3 {
+            margin: 0;
+            cursor: pointer;
+            font-size: 15px;
+        }
+
+            .wpts_eb_title h3 i {
+                font-size: 16px;
+                margin-right: 10px;
+            }
+
+            .wpts_eb_title h3 i.fa-plus-square {
+                color: #aaa;
+            }
+
+            .wpts_eb_title h3 i.fa-minus-square {
+                color: #000!important;
+            }
+
+                .wpts_eb_title h3 i:hover {
+                    color: #000;
+                }
+
+    .wpts_eb_body {
+        display: none;
+        border-top: 1px solid #eee;
+        padding: 12px;
+        background: #fff;
+    }
+
+        .wpts_eb_desc,
+        .wpts_eb_table {
+            clear: both;
+            display: block;
+            padding-bottom: 10px;
+        }
+
+
+/**
+ * Toggles Styles
+ **----------------------- */
+
+.toggle-slide {
+  overflow: hidden;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  direction: ltr;
+  text-align: center;
+}
+div.disabled > .toggle-slide {
+  opacity: 0.7;
+  pointer-events: none;
+}
+.toggle-slide .toggle-on,
+.toggle-slide .toggle-off,
+.toggle-slide .toggle-blob {
+  float: left;
+}
+.toggle-slide .toggle-blob {
+  position: relative;
+  z-index: 99;
+  cursor: hand;
+  cursor: grab;
+}
+
+.toggle-light .toggle-slide {
+    border-radius: 9999px;
+    box-shadow: 0 0 0 1px #999;
+}
+.toggle-light .toggle-on,
+.toggle-light .toggle-off {
+    font-size: 11px;
+    font-weight: 500;
+}
+.toggle-light .toggle-on,
+.toggle-light .toggle-select .toggle-inner .active {
+    background: #45a31f;
+    box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.2);
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+    color: rgba(255, 255, 255, 0.8);
+}
+.toggle-light .toggle-off,
+.toggle-light .toggle-select .toggle-on {
+    color: rgba(0, 0, 0, 0.6);
+    text-shadow: 0 1px rgba(255, 255, 255, 0.2);
+    background: -webkit-linear-gradient(#cfcfcf, #f5f5f5);
+    background: linear-gradient(#cfcfcf, #f5f5f5);
+}
+.toggle-light .toggle-blob {
+    border-radius: 50px;
+    background: -webkit-linear-gradient(#f5f5f5, #cfcfcf);
+    background: linear-gradient(#f5f5f5, #cfcfcf);
+    box-shadow: 1px 1px 2px #888;
+}
+.toggle-light .toggle-blob:hover {
+    background: -webkit-linear-gradient(#e4e4e4, #f9f9f9);
+    background: linear-gradient(#e4e4e4, #f9f9f9);
 }
