--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,6 +111,11 @@
             padding-bottom: 10px;
         }
 
+            .wpts_eb_set_body_title {
+                margin-bottom: 4px;
+                font-weight: 600;
+            }
+
             .wpts_eb_set_body_desc,
             .wpts_eb_set_header_desc {
                 font-style: italic;
