--- a/assets/admin/css/dd-style.css
+++ b/assets/admin/css/dd-style.css
@@ -150,6 +150,14 @@
     padding-bottom: 10px;
 }
 
+.dd_eb_table tr {
+    border-top: 1px solid #e2e2e2;
+}
+
+.dd_eb_set_body {
+    margin-bottom: 14px;
+}
+
 .dd_eb_set_body_title {
     margin-bottom: 4px;
     font-weight: 600;
